# agent_remote

./: .gitignore  README.md  pyproject.toml
docs/: deployment_roles.md  progress.md  work_plan.md
examples/: build-host.http.config.json  build-host.relay.config.json  execution-host.http.config.json  execution-host.relay.config.json  relay-server.config.json  remote-run.config.json  windows-relay-layout.txt
src/agent_remote/: __init__.py  cli.py  config.py  http_relay.py  models.py  relay.py  runner.py  security.py  setup.py  ssh_transport.py  util.py
tests/: test_cli.py  test_http_relay.py  test_relay_runner.py  test_setup.py  test_ssh_transport.py
